api 文檔大致完成, 開始寫unit test
